--- a/functions.ipynb
+++ b/functions.ipynb
@@ -10,10 +10,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ed604e30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Currently Parked Vehicles: 3\n",
+      "Parking Status: Available\n"
+     ]
+    }
+   ],
    "source": [
     "def parking_system(capacity, logs):\n",
     "    \n",
@@ -50,10 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5d73bde0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estimated Delivery Time: 65 minutes\n"
+     ]
+    }
+   ],
    "source": [
     "def delivery_time(distance, traffic, weather):\n",
     "     # Basic time calculation\n",
@@ -86,10 +103,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "78522cb2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Occupancy: 75 %\n",
+      "Show Status: Almost Full\n"
+     ]
+    }
+   ],
    "source": [
     "def theatre_seats(total_seats, booked_list):\n",
     "    booked = len(booked_list)\n",
@@ -116,10 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "01dc715c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average CPU Load: 70 %\n",
+      "Server Status: Warning\n"
+     ]
+    }
+   ],
    "source": [
     "def server_load(cpu_list):\n",
     "    total = 0\n",
@@ -149,10 +184,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5dd520fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overused Resources: AC\n",
+      "Energy Alert: Yes\n"
+     ]
+    }
+   ],
    "source": [
     "def classroom_usage(resources):\n",
     "    overused = []\n",
@@ -184,10 +228,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "73ee3e6a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confirmed Registrations: 100\n",
+      "Waitlisted Users: 5\n",
+      "Registration Status: Closed\n"
+     ]
+    }
+   ],
    "source": [
     "def event_registration(capacity, registrations):\n",
     "    if registrations > capacity:\n",
@@ -212,7 +266,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.13.5"
   }
  },
